# odv_transformer

./: README.md  README.rst  READMEpypi.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
doc/ices_template/: ICES-Oceanography-Data-Submission-Format.txt  ICES-Oceanography-Data-Submission-Format.xlsx
doc/package_structure/: struc
odv_transformer/: __init__.py  config.py  handler.py  main.py  utils.py
odv_transformer/etc/: labo_mapping.yaml  parameter_mapping.yaml
odv_transformer/etc/readers/: chl_tube.yaml  phyche_archive.yaml  profile.yaml
odv_transformer/etc/writers/: ices.yaml  ices_profile.yaml  sdn.yaml
odv_transformer/readers/: __init__.py  discrete.py  profile.py  reader.py  sharklog.py  tube.py  txt.py  zip.py
odv_transformer/run_code/: ices_odv_writer_merge_archives.py  ices_odv_writer_phyche_archive.py  ices_odv_writer_profile_archive.py  odv_tranform_run.py  profil_delivery_cnv_to_txt_format.py
odv_transformer/tests/: test_log_archive_filtering.py  test_merge_deliveries.py  test_reader_phyche_archive.py  test_reader_profile_archive.py  test_reader_tube_sampling.py  test_writer_phyche_archive.py  test_writer_sdn.py  test_writer_tube_sampling.py
odv_transformer/writers/: __init__.py  cdi.py  ices.py  sdn.py  writer.py
src/odv_transformer/: __init__.py  handler.py  utils.py
src/odv_transformer/etc/: parameter_mapping.yaml  ship_mapping.yaml
src/odv_transformer/readers/: discrete.py  profile.py
src/odv_transformer/run_code/: ices_odv_writer_merge_archives.py  ices_odv_writer_phyche_archive.py  (+1 more)
(+20 files in other folders)
