[project]
name = "odv_transformer"
version = "0.0.2"
description = "Converts data into ICES and SeaDataNet ODV delivery format"
authors = [
    {name = "Johannes Johansson", email = "nodc@smhi.se"},
]
dependencies = [
    "numpy",
    "pandas>=2.2.2",
    "six",
    "PyYAML",
    "setuptools",
    "ctdpy @ git+https://github.com/sharksmhi/ctdpy"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["src"] } }
